remove access widener with mixin accessors